[package]
name = "todo-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
term_size = "0.3.2"
ron = "0.8.1"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "todo"
path = "src/main.rs"